# pygomo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: lint.yml
backend/: build.py
src/pygomo/: __init__.py  core.cpp  glfw.cpp  math.cpp  time.cpp  window.cpp
src/pyndow/: __init__.py  glfw.cpp
