[build-system]
requires = [
    "pdm-backend",
    "setuptools",
    "cmake",
    "ninja",
    "pybind11",
]
build-backend = "pdm.backend"

[project]
name = "pyndow"
dynamic = ["version"]
description = "A modern Python library for OpenGL context/window management."
authors = [
    {name = "Zenthm", email = "zenthm.dev@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE.txt"}

[tool.pdm]
distribution = true

[tool.pdm.options]
build = ["--no-wheel"]
install = ["--dev", "--no-isolation"]

[tool.pdm.build]
run-setuptools = true
excludes = ["**/extern"]
source-includes = ["CMakeLists.txt"]

[tool.pdm.version]
source = "scm"
write_to = "pyndow/_version.py"
write_template = "version = '{}'"

[tool.pdm.dev-dependencies]
cmake = ["cmake", "ninja", "pybind11"]
