[build-system]
requires = [
    "pdm-backend",
    "setuptools",
    "cmake",
    "ninja",
    "pybind11",
]
build-backend = "pdm.backend"

[project]
name = "pyndow"
dynamic = ["version"]
description = "A modern Python library for OpenGL context/window management."
authors = [
    {name = "Zenthm", email = "zenthm.dev@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE.txt"}

[tool.pdm]
distribution = true

[tool.pdm.build]
run-setuptools = true
excludes = ["src/**/extern", "src/**/*.cpp"]
source-includes = ["CMakeLists.txt", "src/**/*.cpp"]

[tool.pdm.version]
source = "scm"
write_to = "pyndow/_version.py"
write_template = "version = '{}'"

[tool.pdm.dev-dependencies]
dev = ["pre-commit"] # Default
build = ["cmake", "ninja", "pybind11"]
docs = ["mkdocs", "mkdocs-material"]
lint = ["ruff"]

[tool.ruff]
select = ["ALL"]
ignore = [
    "D1",
    "D203",
    "D212",
]
