[build-system]
requires = [
    "pdm-backend",
    "setuptools",
    "cmake",
    "ninja",
    "pybind11",
    "Jinja2",
]
build-backend = "pdm.backend"

[project]
name = "pygomo"
dynamic = ["version"]
description = "A modern Python library for game development."
authors = [
    {name = "Zenthm", email = "zenthm.dev@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE.txt"}

[tool.pdm]
distribution = true

[tool.pdm.build]
run-setuptools = true
excludes = ["src/**/extern", "src/**/*.cpp"]
source-includes = ["CMakeLists.txt", "src/**/*.cpp"]

[tool.pdm.version]
source = "scm"
write_to = "pygomo/_version.py"
write_template = "version = '{}'"

[tool.pdm.dev-dependencies]
dev = ["pre-commit"] # Default
build = ["cmake", "ninja", "pybind11"]
docs = ["mkdocs", "mkdocs-material"]
lint = ["ruff", "clang-tidy"]
format = ["ruff", "clang-format"]

[tool.ruff]
select = ["ALL"]
ignore = [
    "D1",
    "D203",
    "D212",
]
